# aizo-proj

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  cocktail_list_test.csv  decisions.md  input.txt  output.txt  research_results.csv  results_grade_3.csv  single_bench.csv
build_audit/: aizo_proj
docs/assignment/: requirements.md  tasks.md
docs/notes/: dyld_rpath_conspet.md  kanban.md  todo.md
docs/reference/: eportal-text.md
docs/report/: generated-data.typ  sprawozdanie.md  sprawozdanie.typ
include/algorithms/: BucketSort.h  BucketSort.tpp  CocktailSort.h  CocktailSort.tpp  InsertionSort.h  InsertionSort.tpp  MergeSort.h  MergeSort.tpp  QuickSort.h  QuickSort.tpp
include/app/: SortApplication.h  SortApplication.tpp
include/benchmark/: DataGenerator.h  DataGenerator.tpp
include/io/: DataFile.h  DataFile.tpp
include/structures/: DoublyLinkedList.h  DoublyLinkedList.tpp  DynamicArray.h  DynamicArray.tpp  IStructure.h  SinglyLinkedList.h  SinglyLinkedList.tpp
include/utils/: SortValidation.h  SortValidation.tpp
lib/: Parameters.h  libparameters.dylib
results/: A_cocktail_array.csv  A_cocktail_list.csv  cocktail_singlelist_limit_scan.csv  cocktail_singlelist_limit_status.csv  linked_list_new_sorts_smoke.csv  research_data.csv  research_data_without_cocktail_singlelist.csv  simple_list_test.csv
results/analysis/: badanie_A_summary.csv  badanie_B_summary.csv  badanie_C_summary.csv  cocktail_singlelist_limit_summary.csv  task_summary.csv
scripts/: analyze_results.py  generate_test_data.py  run_linked_list_sorts_smoke.sh  run_research.sh  run_research_without_cocktail_singlelist.sh  scan_cocktail_singlelist_limit.py
src/: main.cpp
test_data/char/: ascending_10.txt  ascending_100.txt  ascending_10000.txt  ascending_100000.txt  ascending_25000.txt  ascending_50000.txt  descending_10.txt  descending_100.txt  descending_10000.txt  descending_100000.txt  descending_25000.txt  descending_50000.txt  half_sorted_10.txt  half_sorted_100.txt  half_sorted_10000.txt  half_sorted_100000.txt  half_sorted_25000.txt  half_sorted_50000.txt  random_10.txt  random_100.txt  random_10000.txt  random_100000.txt  random_25000.txt  random_50000.txt
test_data/float/: ascending_10.txt  ascending_100.txt  ascending_10000.txt  ascending_100000.txt  ascending_25000.txt  ascending_50000.txt  descending_10.txt  descending_100.txt  descending_10000.txt  descending_100000.txt  descending_25000.txt  descending_50000.txt  half_sorted_10.txt  half_sorted_100.txt  half_sorted_10000.txt  half_sorted_100000.txt  half_sorted_25000.txt  half_sorted_50000.txt  random_10.txt  random_100.txt  random_10000.txt  random_100000.txt  random_25000.txt  random_50000.txt
test_data/int/: ascending_10.txt  random_10.txt  (+22 more)
(+24 files in other folders)
